Build warnings reduction